# pool_dataset_gen

./: README.md  cube_diorama_inventory.json  plane_surface_experiments.blend  plane_surface_experiments.blend1  pyproject.toml  simple_render.py
assets/materials/procedural-wood_b0eae083-6f77-4d27-a7de-09f409258582/: procedural-wood_871879d0-0ecc-4781-8202-5470948fb891.blend
scripts/: list_scene_inventory.py  render_lasergrid_toggle.py
src/lasergrid_render/: __init__.py  cli.py  config.py  render_pipeline.py
src/lasergrid_render.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lasergrid_render/configs/: cube_diorama.yaml
src/lasergrid_render/scenes/: __init__.py  lasergrid_toggle.py
